# TDSC23-VCQ

./: .gitignore  CMakeLists.txt  README.md
Puncturable_PRF/: CMakeLists.txt  Punc_PRF.cpp  main.cpp  test.cpp
Puncturable_PRF/GGM/: GGMTree.cpp  Utils.c
VCQ/: CMakeLists.txt  Client.cpp  Crypto_Primitives.cpp  Server.cpp  main.cpp
include/GGM/: GGMNode.h  GGMTree.h  Utils.h
include/Puncturable_PRF/: Punc_PRF.h
include/VCQ/: Client.h  Crypto_Primitives.h  Server.h  common.h
